k8s/samples/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: edgegate
  namespace: default
spec:
  gatewayClassName: edgegate
  listeners:
    - name: http
      port: 80
      protocol: HTTP
